tests/test-files/parse-resume-to.txt
================================================================================
100 Invalid pattern
================================================================================

(package test-package)

(define f
  (resume-to)
  Unit)

--------------------------------------------------------------------------------

error: Malformed resume-to expression
  --> test:4:3
   |
 4 |    (resume-to)
   |     ^^^^^^^^^ expression expected

================================================================================
101 Invalid pattern
================================================================================

(package test-package)

(define f
  (resume-to a b)
  Unit)

--------------------------------------------------------------------------------

error: Malformed resume-to expression
  --> test:4:15
   |
 4 |    (resume-to a b)
   |                 ^ unexpected trailing form
